@startuml mmda-core-caching
skinparam defaultFontName "Microsoft YaHei"
skinparam defaultFontSize 12
skinparam shadowing false
set namespaceSeparator none
skinparam nodesep 12
skinparam ranksep 26
skinparam packageStyle rectangle
hide circle
hide empty members
title mmda-core-caching　类关系图（10 个类型 / 1,765 行）
legend right
  图中节点 7 / 10 个：按模块内被引用度排序取前 34
  实线空心箭头=extends；虚线空心箭头=implements
  <u>虚线开放箭头=类型引用</u>（数字=引用它的文件数，≥2 才画）
  真源：src/main/java 源码实测（import + 同包名引用 + extends/implements）
endlegend
package "caching" {
  class "CachePolicy" as T5
  interface "CacheProvider" as T0
  interface "ReactiveCacheProvider" as T1
}
package "caching.redis" {
  class "DistributedLock" as T4
  class "EntityCacheProvider" as T2
  class "ReactiveDistributedLock" as T6
  class "ReactiveEntityCacheProvider" as T3
}
T0 <|.. T2
T1 <|.. T3
T0 ..> T5 : 1
T1 ..> T0 : 1
T2 ..> T0 : 2
T2 ..> T4 : 1
T6 ..> T4 : 1
T3 ..> T1 : 2
T3 ..> T6 : 1
footer
  <b>模块外依赖（真源 pom.xml）</b>　源码模块：—　|　预编译 jar（scope=system）：mmda-core-entities · mmda-core-metadata · mmda-core-utils
endfooter
@enduml
